Resolve the overflow problem caused by the app -logo

--- a/Frontend/src/app/layouts/header/header.component.css
+++ b/Frontend/src/app/layouts/header/header.component.css
@@ -2,8 +2,12 @@
   position: sticky;
   top: 0;
   background-color: #343536;
-  height: 60px;
+  height: 70px;
   border-bottom: 1px solid grey;
+}
+
+#app-header > img{
+  cursor: pointer;
 }
 
 h3 {
